@@ -160,4 +160,9 @@
 /(*NO_AUTO_POSSESS)\w+(?C1)/BI
     abc\=callout_fail=1
 
+# This test breaks the JIT stack limit 
+
+/(|]+){2,2452}/
+    (|]+){2,2452}
+
 # End of testinput15
